save table center

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
    
     <div>
-        <table  cellspacing="4" cellpadding="20" border="1">
+        <table align="center" cellspacing="4" cellpadding="20" border="1">
             <!--
             <tr>
                 <td>0</td>
